--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -124,7 +124,7 @@
   <data name="Diamond_Pickaxe_Right" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\game2\diamond_pickaxe_right.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="dirt_block" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Dirt_Block" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\game2\dirt_block.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Final_Gate" type="System.Resources.ResXFileRef, System.Windows.Forms">
@@ -136,7 +136,7 @@
   <data name="Gate" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\game1\gate.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="grass_block" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Grass_Block" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\game2\grass_block.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Player_down" type="System.Resources.ResXFileRef, System.Windows.Forms">
