--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -118,11 +118,23 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Diamond_Axe_Left" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\game2\diamond_axe_left.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Diamond_Axe_Right" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\game2\diamond_axe_right.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Diamond_Pickaxe_Left" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\game2\diamond_pickaxe_left.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Diamond_Pickaxe_Right" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\game2\diamond_pickaxe_right.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Diamond_Sword_Left" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\game2\diamond_sword_left.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Diamond_Sword_Right" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\game2\diamond_sword_right.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Dirt_Block" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\game2\dirt_block.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -139,6 +151,12 @@
   <data name="Grass_Block" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\game2\grass_block.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Inventory" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\game2\inventory.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Leaves" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\game2\leaves.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Player_down" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\game1\player_down.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -153,5 +171,8 @@
   </data>
   <data name="Steve" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\game2\steve.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Wood" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\game2\wood.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
