--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -130,6 +130,12 @@
   <data name="Diamond_Pickaxe_Right" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\game2\diamond_pickaxe_right.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Diamond_Shovel_Left" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\game2\diamond_shovel_left.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Diamond_Shovel_Right" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\game2\diamond_shovel_right.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Diamond_Sword_Left" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\game2\diamond_sword_left.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -151,9 +157,6 @@
   <data name="Grass_Block" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\game2\grass_block.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Inventory" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\game2\inventory.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="Leaves" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\game2\leaves.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -169,14 +172,14 @@
   <data name="Player_up" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\game1\player_up.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Selector" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\game2\selector.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="Steve" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\game2\steve.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Stone" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\game2\stone.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Toolbar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\game2\toolbar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Wood" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\game2\wood.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
